--- a/ResortApp.Web/Views/_ViewImports.cshtml
+++ b/ResortApp.Web/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using ResortApp.Web
 @using ResortApp.Web.Models
+@using ResortApp.Domain.Entities
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
