--- a/ResortApp.Web/Views/_ViewImports.cshtml
+++ b/ResortApp.Web/Views/_ViewImports.cshtml
@@ -1,4 +1,5 @@
 ﻿@using ResortApp.Web
 @using ResortApp.Web.Models
 @using ResortApp.Domain.Entities
+@using ResortApp.Web.ViewModels
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
