--- a/ResortApp.Web/Views/VillaNumber/Index.cshtml
+++ b/ResortApp.Web/Views/VillaNumber/Index.cshtml
@@ -36,10 +36,10 @@
                     <td>@obj.SpecialDetails</td>
                     <td>
                         <div class="w-75 btn-group" role="group">
-                            <a asp-controller="VillaNumber" asp-action="" asp-route-villaNumberId="@obj.VillaNum" class="btn btn-success mx-2">
+                            <a asp-controller="VillaNumber" asp-action="Update" asp-route-villaNumberId="@obj.VillaNum" class="btn btn-success mx-2">
                                 <i class="bi bi-pencil-square"></i> Edit
                             </a>
-                            <a asp-controller="VillaNumber" asp-action="" asp-route-villaNumberId="@obj.VillaNum" class="btn btn-danger mx-2">
+                            <a asp-controller="VillaNumber" asp-action="Delete" asp-route-villaNumberId="@obj.VillaNum" class="btn btn-danger mx-2">
                                 <i class="bi bi-trash-fill"></i> Delete
                             </a>
                         </div>
