--- a/ResortApp.Web/Views/Home/Index.cshtml
+++ b/ResortApp.Web/Views/Home/Index.cshtml
@@ -49,7 +49,7 @@
             <div class="col-4 col-md-2 pt-4 pr-2">
                 <div class="form-group">
                     <button type="button" class="btn btn-success btn-block">
-                        <i class="bi bi-search"></i>  &nbsp; Check Availability
+                        <i class="bi bi-search"></i> Check Availability
                     </button>
 
                 </div>
@@ -71,7 +71,7 @@
                                 <div class="d-flex justify-content-between">
                                     <p class="card-title text-warning" style="font-size:xx-large">@villa.Name</p>
                                     <div class="pt-2">
-                                        <button type="button" class="btn btn-sm btn-outline-success" data-bs-toggle="modal" data-bs-target='#exampleModal-@(11)'>
+                                        <button type="button" class="btn btn-sm btn-outline-success" data-bs-toggle="modal" data-bs-target='#exampleModal-@(villa.Id)'>
                                             Details
                                         </button>
                                     </div>
@@ -93,9 +93,9 @@
                                     </div>
                                     <div class="col-4">
                                         <span class="text-warning float-end font-weight-bold pt-1" style="font-size:25px;">
-                                            USD
+                                            IDR
                                             <span style="border-bottom:1px solid #ff6a00">
-                                                @villa.Price.ToString("c");
+                                                @villa.Price.ToString("c")
                                             </span>
                                         </span>
                                     </div>
@@ -104,11 +104,11 @@
                         </div>
                     </div>
 
-                    <div class="modal fade" id="exampleModal-@(11)" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+                    <div class="modal fade" id="exampleModal-@(villa.Id)" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                         <div class="modal-dialog modal-xl" style="border: 1px solid #aaa; border-radius:7px;">
                             <div class="modal-content">
                                 <div class="modal-header">
-                                    <h1 class="modal-title fs-3 text-success" id="exampleModalLabel">Villa Details</h1>
+                                    <h1 class="modal-title fs-3 text-success" id="exampleModalLabel">Villa Details - @villa.Name</h1>
                                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                 </div>
                                 <div class="modal-body m-0">
