--- a/ResortApp.Web/Views/Shared/_Layout.cshtml
+++ b/ResortApp.Web/Views/Shared/_Layout.cshtml
@@ -38,6 +38,7 @@
                         </li>
 
                     </ul>
+                    <partial name="_LoginPartial" />
                 </div>
             </div>
         </nav>
