--- a/ResortApp.Web/Views/Account/Login.cshtml
+++ b/ResortApp.Web/Views/Account/Login.cshtml
@@ -37,7 +37,7 @@
                             </div>
                             <div class="d-flex justify-content-between pt-2">
                                 <p>
-                                    <a asp-action="ForgotPassword">Forgot your password?</a>
+                                    <a asp-action="">Forgot your password?</a>
                                 </p>
                                 <p>
                                     <a asp-action="Register">Register as a new user</a>
