--- a/ResortApp.Web/Views/Account/Register.cshtml
+++ b/ResortApp.Web/Views/Account/Register.cshtml
@@ -12,31 +12,33 @@
         <div class="card-body p-4">
             <div class="row pt-3">
                 <div class="col-md-12">
-                    <form class="row" method="post">
+                    <form class="row" asp-controller="Account" asp-action="Register" method="post">
+                        @Html.AntiForgeryToken()
+
                         <div class="form-floating mb-3 col-md-12">
-                            <input asp-for="Email" class="form-control" aria-required="true" />
+                            <input asp-for="Email" class="form-control" aria-required="true"/>
                             <label asp-for="Email" class="ms-2 text-muted">Email</label>
-                            <span asp-validation-for="Email" class="text-danger" />
+                            <span asp-validation-for="Email" class="text-danger"/>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
                             <input asp-for="Name" class="form-control"/>
                             <label asp-for="Name" class="ms-2 text-muted">Full Name</label>
-                            <span asp-validation-for="Name" class="text-danger" />
+                            <span asp-validation-for="Name" class="text-danger"/>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
-                            <input asp-for="PhoneNumber" class="form-control" />
+                            <input asp-for="PhoneNumber" class="form-control"/>
                             <label asp-for="PhoneNumber" class="ms-2 text-muted">Phone Number</label>
-                            <span asp-validation-for="PhoneNumber" class="text-danger" />
+                            <span asp-validation-for="PhoneNumber" class="text-danger"/>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
                             <input asp-for="Password" class="form-control"/>
                             <label asp-for="Password" class="ms-2 text-muted">Password</label>
-                            <span asp-validation-for="Email" class="text-danger" />
+                            <span asp-validation-for="Password" class="text-danger"/>
                         </div>
                         <div class="form-floating mb-3 col-md-6">
-                            <input asp-for="ConfirmPassword" class="form-control" />
+                            <input asp-for="ConfirmPassword" class="form-control"/>
                             <label asp-for="ConfirmPassword" class="ms-2 text-muted">Confirm Password</label>
-                            <span asp-validation-for="ConfirmPassword" class="text-danger" />
+                            <span asp-validation-for="ConfirmPassword" class="text-danger"/>
                         </div>
 
                         <div class="form-floating mb-3 col-md-6">
@@ -52,5 +54,9 @@
             </div>
         </div>
     </div>
-
 </div>
+
+
+@section Scripts {
+    <partial name="_ValidationScriptsPartial" />
+}
