--- a/ResortApp.Web/Views/Shared/_LoginPartial.cshtml
+++ b/ResortApp.Web/Views/Shared/_LoginPartial.cshtml
@@ -10,7 +10,7 @@
             <a class="nav-link" href="#">Hello, @UserManager.GetUserName(User)</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link" asp-controller="Account" asp-action="">Logout</a>
+            <a class="nav-link" asp-controller="Account" asp-action="Logout">Logout</a>
         </li>
     }
     else
