--- a/ResortApp.Web/Views/Home/Index.cshtml
+++ b/ResortApp.Web/Views/Home/Index.cshtml
@@ -48,8 +48,8 @@
 
             <div class="col-4 col-md-2 pt-4 pr-2">
                 <div class="form-group">
-                    <button type="button" class="btn btn-success btn-block">
-                        <i class="bi bi-search"></i> Check Availability
+                    <button type="submit" class="btn btn-success btn-block">
+                        <i class="bi bi-search"></i> &nbsp; Check Availability
                     </button>
 
                 </div>
@@ -83,9 +83,21 @@
                             <div class="col-12">
                                 <div class="row pb-3 pt-2">
                                     <div class="col-4">
-                                        <a class="btn btn-success form-control btn-block">
-                                            Book
-                                        </a>
+                                        @if (Model.CheckInDate > DateOnly.FromDateTime(DateTime.Now))
+                                        {
+                                            if (villa.IsAvailable)
+                                            {
+                                                <a class="btn btn-success form-control btn-block">
+                                                    Book
+                                                </a>
+                                            }
+                                            else
+                                            {
+                                                <a class="btn btn-outline-danger disabled form-control btn-block">
+                                                    Sold Out
+                                                </a>
+                                            }
+                                        }
                                     </div>
                                     <div class="col-4">
                                         <span class="">Max Occupancy : @villa.Occupancy adults </span><br/>
