--- a/ResortApp.Web/Views/Home/Index.cshtml
+++ b/ResortApp.Web/Views/Home/Index.cshtml
@@ -24,7 +24,13 @@
             <span class="visually-hidden">Next</span>
         </button>
     </div>
-    <form method="post" style="background-color:black">
+    <form method="post" style="background-color:black"
+          asp-action="GetVIllasByDate"
+          data-ajax-method="pos"
+          data-ajax="true"
+          data-ajax-mode="replace"
+          data-ajax-update="#VillasList"
+          >
         <div class="row p-0 mx-0 py-4">
 
             <div class="col-12 col-md-5  offset-md-1 pl-2  pr-2 pr-md-0">
