Without unobstrusive library

--- a/ResortApp.Web/Views/Home/Index.cshtml
+++ b/ResortApp.Web/Views/Home/Index.cshtml
@@ -30,7 +30,7 @@
           data-ajax="true"
           data-ajax-mode="replace"
           data-ajax-update="#VillasList"
-          >
+    >
         <div class="row p-0 mx-0 py-4">
 
             <div class="col-12 col-md-5  offset-md-1 pl-2  pr-2 pr-md-0">
@@ -43,7 +43,7 @@
             <div class="col-8 col-md-3 pl-2 pr-2">
                 <div class="form-group">
                     <label>No. of nights</label>
-                    <select class="form-select">
+                    <select class="form-select" asp-for="Nights">
                         @for (var i = 1; i < 11; i++)
                         {
                             <option value="@i">@i</option>
@@ -54,10 +54,9 @@
 
             <div class="col-4 col-md-2 pt-4 pr-2">
                 <div class="form-group">
-                    <button type="submit" class="btn btn-success btn-block">
+                    <button type="button" onclick="fnLoadVillaList()" class="btn btn-success btn-block">
                         <i class="bi bi-search"></i> &nbsp; Check Availability
                     </button>
-
                 </div>
             </div>
 
@@ -67,3 +66,24 @@
 
     </form>
 </div>
+
+@section scripts {
+    <script>
+        function fnLoadVillaList() {
+            var objData = {
+                checkInDate: $("#CheckInDate").val(),
+                nights: $("#Nights").val
+            };
+
+            $.ajax ({
+                url: "@Url.Action("GetVIllasByDate", "Home")",
+                data: objData,
+                type: "POST",
+                success: function (data) {
+                    $("#VillasList").empty();
+                    $("#VillasList").html(data);
+                }
+            });
+        }
+    </script>
+}
