--- a/ResortApp.Web/Views/_ViewImports.cshtml
+++ b/ResortApp.Web/Views/_ViewImports.cshtml
@@ -2,4 +2,5 @@
 @using ResortApp.Web.Models
 @using ResortApp.Domain.Entities
 @using ResortApp.Web.ViewModels
+@using ResortApp.Application.Common.Utility
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
