--- a/ResortApp.Web/Views/_ViewStart.cshtml
+++ b/ResortApp.Web/Views/_ViewStart.cshtml
@@ -1,3 +1,9 @@
-﻿@{
+﻿@using ResortApp.Application.Common.Utility
+@if (User.IsInRole(SD.Role_Admin))
+{
+    Layout = "_LayoutAdmin";
+}
+else
+{
     Layout = "_Layout";
 }
