--- a/ResortApp.Web/Views/Shared/_Layout.cshtml
+++ b/ResortApp.Web/Views/Shared/_Layout.cshtml
@@ -76,7 +76,7 @@
     <script src="~/js/site.js" asp-append-version="true"></script>
     <script src="//cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js" asp-append-version="true"></script>
     @* <script src="~/js/jquery.unobstrusive-ajax.min.js"></script> *@
-    <script src="~/js/apexcharts.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/apexcharts"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
