--- a/ResortApp.Web/Views/Dashboard/Index.cshtml
+++ b/ResortApp.Web/Views/Dashboard/Index.cshtml
@@ -33,5 +33,6 @@
 </div>
 
 @section scripts {
+    <script src="~/js/dashboard/radialChart.js"></script>
     <script src="~/js/dashboard/getTotalBookingsRadial.js"></script>
 }
