--- a/ResortApp.Web/Views/Dashboard/Index.cshtml
+++ b/ResortApp.Web/Views/Dashboard/Index.cshtml
@@ -83,4 +83,6 @@
 @section scripts {
     <script src="~/js/dashboard/radialChart.js"></script>
     <script src="~/js/dashboard/getTotalBookingsRadial.js"></script>
+    <script src="~/js/dashboard/getTotalRevenueRadial.js"></script>
+    <script src="~/js/dashboard/getTotalUserRadial.js"></script>
 }
