--- a/ResortApp.Web/Views/Dashboard/Index.cshtml
+++ b/ResortApp.Web/Views/Dashboard/Index.cshtml
@@ -100,6 +100,8 @@
                         <p class="text-muted mb-0">Customer Bookings</p>
                     </div>
 
+                    <div id="customerBookingsPieChart" data-colors='["--bs-warning", "--bs-primary"]'></div>
+
                     <div class="justify-content-center text-center chart-spinner" style="display: none;">
                         <div class="spinner-border" role="status">
                             <span class="visually-hidden" role="status">Loading...</span>
